--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,39 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>goit-js-hw-11v2</title>
+    <title>Homework-11v2</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <main>goit-js-hw-11v2</main>
+    <main>
+      <header class="header">
+        <div class="container header__container">
+          <a href="https://pixabay.com/" target="_blank">
+            <img
+              class="logo"
+              src="./images/pixabay_logo.png"
+              alt="pixabay logo"
+            />
+          </a>
+          <form class="search-form" id="search-form">
+            <input
+              type="text"
+              name="searchQuery"
+              autocomplete="off"
+              placeholder="Search images..."
+            />
+            <button type="submit"><i class="fa fa-search"></i></button>
+          </form>
+        </div>
+      </header>
+
+      <div class="container"></div>
+      <div class="container"></div>
+    </main>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
