--- a/src/index.html
+++ b/src/index.html
@@ -13,33 +13,50 @@
   </head>
   <body>
     <header class="header">
-      <div class="container header-container">
-        <a href="https://pixabay.com/" target="_blank">
-          <img
-            class="logo"
-            src="./images/pixabay_logo.png"
-            alt="pixabay logo"
-          />
-        </a>
-        <form class="search-form" id="search-form">
-          <input
-            type="text"
-            name="searchQuery"
-            autocomplete="off"
-            placeholder="Search images..."
-          />
-          <button type="submit"><i class="fa fa-search"></i></button>
-        </form>
-        <label class="switch">
-          Infinite loading
-          <input class="js-checkbox" type="checkbox" />
-          <span class="slider round"></span>
-        </label>
+      <div class="container">
+        <div class="header-container">
+          <a href="https://pixabay.com/" target="_blank">
+            <img
+              class="logo"
+              src="./images/pixabay_logo.png"
+              alt="pixabay logo"
+            />
+          </a>
+          <form class="search-form" id="search-form">
+            <input
+              type="text"
+              name="searchQuery"
+              autocomplete="off"
+              placeholder="Search images..."
+            />
+            <button type="submit"><i class="fa fa-search"></i></button>
+          </form>
+          <label class="switch">
+            Infinite loading
+            <input class="js-checkbox" type="checkbox" />
+            <span class="slider round"></span>
+          </label>
+        </div>
+        <div class="images-info-wrapper">
+          <p class="images-info js-images-info">Total images: 0 Page: 0/0</p>
+          <label
+            >Per page:
+            <select class="image-per-page js-image-per-page">
+              <option value="12">12</option>
+              <option value="24" selected>24</option>
+              <option value="36">36</option>
+              <option value="48">48</option>
+              <option value="60">60</option>
+            </select>
+          </label>
+        </div>
       </div>
     </header>
     <main>
       <div class="container gallery-container">
-        <p class="images-info">Page: 22/444. Total images: 777</p>
+        <div class="js-gallery">
+          <!-- Картки зображень -->
+        </div>
       </div>
       <div class="container"></div>
     </main>
