adds some extra classes

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
           </form>
           <label class="switch">
             Infinite loading
-            <input class="js-checkbox" type="checkbox" />
+            <input class="js-checkbox-pagination" type="checkbox" />
             <span class="slider round"></span>
           </label>
         </div>
@@ -41,7 +41,7 @@
           <p class="images-info js-images-info">Total images: 0 Page: 0/0</p>
           <label
             >Per page:
-            <select class="image-per-page js-image-per-page">
+            <select class="image-per-page js-per-page-selector">
               <option value="12">12</option>
               <option value="24" selected>24</option>
               <option value="36">36</option>
@@ -54,7 +54,7 @@
     </header>
     <main>
       <div class="container gallery-container">
-        <div class="js-gallery">
+        <div class="js-gallery gallery">
           <!-- Картки зображень -->
         </div>
       </div>
