--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,7 @@
         </div>
       </div>
       <div class="container"></div>
+      <div class="js-observer-target"></div>
     </main>
     <script src="./index.js" type="module"></script>
   </body>
