adds spinner for search buttons

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,9 @@
               autocomplete="off"
               placeholder="Search images..."
             />
-            <button type="submit"><i class="fa fa-search"></i></button>
+            <button type="submit" name="searchButton">
+              <i class="fa fa-search"></i>
+            </button>
           </form>
           <label class="switch">
             Infinite loading
@@ -62,10 +64,17 @@
             </button>
           </div> -->
         </div>
-        <div class="js-card-plus" hidden="true">
-          <button type="button" class="card-image-load">Load more...</button>
+        <div class="card-plus">
+          <button
+            type="button"
+            class="js-card-plus card-image-load"
+            hidden="true"
+          >
+            Load more...
+          </button>
         </div>
       </div>
+
       <div class="container"></div>
 
       <div class="js-observer-target"></div>
