adds paginstion line

--- a/src/index.html
+++ b/src/index.html
@@ -73,9 +73,8 @@
             Load more...
           </button>
         </div>
+        <div class="pagination"></div>
       </div>
-
-      <div class="container"></div>
 
       <div class="js-observer-target"></div>
     </main>
