add image info in gallery

--- a/src/index.html
+++ b/src/index.html
@@ -63,6 +63,7 @@
             type="button"
             class="js-card-plus card-image-load"
             hidden="true"
+            title="Load next page"
           >
             Load more...
           </button>
