adds basic modal window

--- a/src/index.html
+++ b/src/index.html
@@ -80,6 +80,15 @@
     >
       <i class="fa fa-chevron-circle-up fa-4x"></i>
     </button>
+
+    <!-- The Modal -->
+    <div id="myModal" class="modal">
+      <!-- Modal content -->
+      <div class="modal-content js-modal-content">
+        <span class="js-modal-close close">&times;</span>
+        <p>Some text in the Modal..</p>
+      </div>
+    </div>
     <script src="./index.js" type="module"></script>
   </body>
 </html>
