adds modal form

--- a/src/index.html
+++ b/src/index.html
@@ -84,11 +84,14 @@
     <!-- The Modal -->
     <div id="myModal" class="modal">
       <!-- Modal content -->
-      <div class="modal-content js-modal-content">
-        <span class="js-modal-close close">&times;</span>
-        <p>Some text in the Modal..</p>
+      <div class="modal-wrapper js-modal-wrapper">
+        <span class="js-modal-close modal-close">&times;</span>
+        <div class="modal-content js-modal-content">
+          <p>Some text in the Modal..</p>
+        </div>
       </div>
     </div>
+
     <script src="./index.js" type="module"></script>
   </body>
 </html>
